--- a/style.css
+++ b/style.css
@@ -47,19 +47,19 @@ body {
 .list-item3 {
   position: absolute;
   top: 45px;
-  right: 610px;
+  left: 850px;
   color: rgb(160, 155, 155);
 }
 .list-item4 {
   position: absolute;
-  right: 390px;
+  left: 950px;
   top: 45px;
   color: rgb(160, 155, 155);
 }
 .button-small {
   position: absolute;
   top: 30px;
-  right: 170px;
+  left: 1250px;
   border-bottom-width: 3px;
   border-radius: 0.6em;
   font-size: 17px;
@@ -85,7 +85,7 @@ body {
 }
 .paragraph {
   position: absolute;
-  right: 190px;
+  left: 890px;
   width: 430px;
   font-size: 23px;
   top: 210px;
@@ -106,5 +106,6 @@ body {
 
 .image {
   position: absolute;
-  top: 450px;
+  width: 100%;
+  top: 420px;
 }
